--- a/deeplinkRN/android/app/src/main/AndroidManifest.xml
+++ b/deeplinkRN/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
   package="com.deeplinkrn">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.NFC" />
 
     <application
       android:name=".MainApplication"
@@ -21,6 +22,23 @@
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
+        <intent-filter>
+            <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+            <category android:name="android.intent.category.DEFAULT"/>
+            <data android:scheme="https"
+                  android:host="washow.netlify.app" />
+        </intent-filter>
+        <intent-filter>
+            <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+            <category android:name="android.intent.category.DEFAULT"/>
+            <data android:scheme="https"
+                  android:host="api.realitag.app" />
+        </intent-filter>
+        <intent-filter>
+          <action android:name="android.nfc.action.TECH_DISCOVERED"/>
+        </intent-filter>
+        <meta-data android:name="android.nfc.action.TECH_DISCOVERED"
+                   android:resource="@xml/nfc_tech_filter" />
       </activity>
     </application>
 </manifest>
