--- a/deeplinkRN/package.json
+++ b/deeplinkRN/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.4",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-base64": "^0.2.1",
     "react-native-nfc-manager": "^3.14.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2"
